Minor bug fix (text overflow breaks content)

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -28,6 +28,7 @@
   padding-left: 0.3em;
   border-bottom: 3px solid #494b54;
   overflow-wrap: break-word;
+  overflow: hidden;
 }
 
 .tweet footer {
